Added button element and id for access in etch.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <button id="gridSize">What size grid would you like to sketch on?</button>
     <div class="sketchPad">
 
     </div>
